2014-05-23  Roland Levillain  <roland@lrde.epita.fr>

	Make Swilena compatible with SWIG 2.0.9+.

	* image2d.ixx,
	* neighb2d.i,
	* window2d.i:
	Give names to wrapped base classes, so that recent version of SWIG
	actually considers them and allows upcasts.

2014-05-22  Roland Levillain  <roland@lrde.epita.fr>

	Address Clang warnings in Swilena.

	* dynamic_image2d.i: Here.

2013-09-10  Roland Levillain  <roland@lrde.epita.fr>

	Swilena: Remove lines `VARIABLE = @VARIABLE@' from Makefile.am's.

	* python/Makefile.am: Here, as Automake 1.11+ already takes care
	of this.

2013-09-09  Roland Levillain  <roland@lrde.epita.fr>

	Swilena: Remove Milena's build dir from the file inclusion path.

	* python/Makefile.am (AM_CPPFLAGS): Here.

2013-08-29  Roland Levillain  <roland@lrde.epita.fr>

	Fix inclusion paths in Swilena.

	* python/Makefile.am (AM_CPPFLAGS): Add -I$(top_builddir)/milena.

2013-04-12  Roland Levillain  <roland@lrde.epita.fr>

	Adjust Swilena to Automake parallel tests.

	* python/Makefile.am: s/TESTS_ENVIRONMENT/LOG_COMPILER/.

2013-04-12  Roland Levillain  <roland@lrde.epita.fr>

	Enable verbose messages in Swilena Python tests.

	* run.in: Here.
	Convert to UTF-8.

2013-04-09  Roland Levillain  <roland@lrde.epita.fr>

	Simplify Swilena's python/Makefile.am.

	* python/Makefile.am (data.py): Here.

2013-04-09  Roland Levillain  <roland@lrde.epita.fr>

	Simplify some Swilena Python test cases.

	* python/data.py.in (lena): Use small.pgm instead of lena.pgm.
	* python/max-tree.py: Disable a no longer working statement (needs
	further investigation).

2013-04-09  Roland Levillain  <roland@lrde.epita.fr>

	Fix Makefile pattern rules generating several tests outputs.

	* python/Makefile.am (%-wrap.cc %.py): Do not use `$@' in the
	action block to represent the first output, as `$@' may stand for
	any target of the rule; instead, rely on an explicit pattern based
	on `$*'.

2013-04-09  Roland Levillain  <roland@lrde.epita.fr>
